package com.testwa.distest.server.rpc.cache;import io.grpc.stub.StreamObserver;import io.rpc.testwa.agent.ClientInfo;import io.rpc.testwa.agent.Status;public interface IClientCache <T>{		public void registerToServer(ClientInfo clientInfo, StreamObserver<T> observer);		public boolean removeErrorObserver(String clientId);		public StreamObserver<T> getObserver(String clientId);		public Status logoutFromServer(ClientInfo clientInfo);		public StreamObserver<T> getObserver(ClientInfo clientInfo);		public void clearErrorObserver();}